fix saving with groups